syntax = "proto3";
package schema.v2;

message GenerateERDResponse {
  int32 project_generate_queue_id = 1;

  Status status = 2;
  string error_message = 3;
  string data = 4;

  enum Status {
    UNSPECIFIED = 0;
    SUCCEEDED = 1;
    FAILED = 2;
  }
}
